# bastion

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  KNOWN_ISSUES.md  LICENSE  README.md  SECURITY.md  conftest.py  constraints.txt  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-client.yml  release.yml
_archive/: M58_BASTION_HANDOFF.md  README.md  dashboard_v1.py
_archive/docs/audit/: SYNTHESIS.md  analyst-a2a-protocol.md  analyst-dashboard-ui.md  analyst-metrics-telemetry.md  analyst-security-resilience.md  ref-broker-example-config.yaml  ref-llm-inventory.md  ref-multi-gpu-plan.md  ref-phase1-foundation.md  ref-phase2-dashboard.md  ref-phase2-hardening.md  ref-phase2-swarm.md  ref-phase3-protocol.md  ref-phase4-polish.md  ref-readme.md  scout-api-surface.md  scout-code-cartography.md  scout-data-models.md
clients/bastion-client/: README.md  pyproject.toml
clients/bastion-client/bastion_client/: __init__.py  client.py  models.py
clients/bastion-client/tests/: test_client.py
config/: broker.example.yaml
docs/: api.md  architecture.md  configuration.md  crash-prevention.md  deployment.md  getting-started.md  hardware-guide.md  operations.md  production-roadmap-prompt.md  releasing.md  security.md  troubleshooting.md
docs/adrs/: ADR-005-B-mcp-third-surface.md  ADR-005-bastionpanel-data-contract.md  ADR-006-auth-model.md  ADR-007-mcp-tool-versioning.md  ADR-008-policy-audit-log-deferred.md  ADR-009-tui-deprecation-trigger.md  ADR-010-grafana-json-compatibility.md
docs/audit/: SYNTHESIS.md  analyst-a2a-protocol.md  analyst-config-integration.md  analyst-scheduler-queue.md  analyst-security-resilience.md  analyst-test-coverage.md  analyst-vram-gpu.md  ref-a2a-plan.md  ref-architecture.md  ref-broker-config.yaml  ref-crash-prevention.md  ref-gpu-patterns.md  ref-llm-inventory.md  ref-phase2-dashboard.md  ref-phase2-hardening.md  ref-phase2-integration.md  ref-phase3-protocol.md  ref-phase4-polish.md  ref-roadmap.md  ref-systemd-readme.md
docs/design/plans/: 2026-04-20-m58-bastion-integration.md  2026-04-23-production-readiness.md  2026-04-24-security-policy.md  2026-04-25-bastion-client-publish-prep.md  2026-05-15-dashboard-v0.4-vision-c.md
docs/design/specs/: 2026-03-13-observability-first-design.md  2026-03-13-observability-implementation-plan.md  2026-04-06-sqlite-persistence-design.md  2026-04-07-docker-support-design.md  2026-04-08-pre-launch-audit-design.md  2026-04-20-m58-bastion-integration-design.md  2026-04-23-production-readiness-design.md  2026-04-24-security-policy-design.md  2026-04-25-bastion-client-publish-prep-design.md  2026-05-14-dashboard-v0.4-vision-c.md  2026-06-19-observability-expansion-grafana-catalogue.md  2026-06-19-observability-expansion-metric-freeze.md  2026-06-19-observability-expansion.md  2026-06-26-swap-velocity-circuit-breaker-design.md
docs/superpowers/plans/: 2026-04-20-m58-bastion-integration.md  2026-04-23-production-readiness.md  2026-04-24-security-policy.md  2026-04-25-bastion-client-publish-prep.md
docs/superpowers/specs/: 2026-03-13-observability-first-design.md  2026-03-13-observability-implementation-plan.md  2026-04-06-sqlite-persistence-design.md  2026-04-07-docker-support-design.md  2026-04-24-security-policy-design.md  2026-06-04-vram-ledger-honesty-design.md
examples/basic-proxy/: README.md
examples/docker-compose/: README.md  docker-compose.yml
examples/priority-tiers/: README.md  multi_client.py
examples/python-client/: README.md  example.py
packaging/: bastion-dashboard.desktop.in
reference/: CRASH_ROOT_CAUSE.md  QUEUE_STALENESS_INVESTIGATION.md
scripts/: check_metric_cardinality.py  gpu_fan_control_wrapper.py  install-desktop.sh  launch_dashboard.sh  lock-deps.sh  test_bastion_client.sh
src/bastion/: __init__.py  __main__.py  a2a.py  audit.py  auth.py  circuitbreaker.py  config.py  constants.py  correlation.py  dashboard.py  discovery.py  gpu_profiles.py  health.py  inference_tap.py  latency_aggregator.py  metrics.py  middleware.py  models.py  paths.py  persistence.py  proxy.py  queue.py  ratelimit.py  scheduler.py  server.py  stress.py  swapbrake.py  taskstore.py  telemetry.py  thrashing.py  validate.py  vram.py  watchdog.py
src/bastion/dashboard/: __init__.py  __main__.py  app.py  client.py  collectors.py  helpers.py  modals.py  panels_broker.py  panels_correlation.py  panels_gpu.py  panels_processes.py  panels_secondary.py  panels_system.py  statusbar.py  widgets.py
src/bastion/gpu/: __init__.py  base.py  nvidia.py  stub.py
systemd/: README.md  bastion-sudoers.example  bastion.service.example  nvidia-powercap.service.example  ollama-port-override.conf.example
tests/: conftest.py  test_a2a.py  test_a2a_lifecycle.py  test_admin_app_endpoints.py  test_audit.py  test_audit_tiered.py  test_auth.py  test_broker_catalog_endpoint.py  test_broker_contention_endpoint.py  test_broker_latency_endpoint.py  test_broker_processes_endpoint.py  test_broker_snapshot_endpoint.py  test_broker_version.py  test_broker_yaml.py  test_circuitbreaker.py  test_cleanup_inflight_resilient.py  test_cli_main.py  test_complexity_routing.py  test_concurrency.py  test_config.py  test_config_models.py  test_constants_and_audit_cursor.py  test_correlation_derivations.py  test_correlation_endpoints.py  test_correlation_engine_core.py  test_correlation_metrics.py  test_dashboard.py  test_dashboard_actions.py  test_dashboard_client.py  test_dashboard_correlation_layout.py  test_dashboard_import_sideeffects.py  test_dashboard_modals.py  test_dashboard_v2.py  test_desktop_launcher.py  test_discovery.py  test_e2e_stress.py  test_error_boundaries.py  test_failure_gpu_ollama.py  test_failure_queue_drain_vram.py  test_funnel.py  (+66 more)
