[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bastion"
version = "0.2.0"
description = "Batch Affinity Scheduler for Throttled Inference on Ollama Networks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Cyprian Winogradow" },
]
keywords = ["ollama", "gpu", "vram", "scheduler", "proxy", "inference", "broker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
a2a = ["a2a-sdk[http-server]>=0.3"]
dashboard = ["textual>=1.0", "httpx>=0.27"]
metrics = ["prometheus-client>=0.20"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",  # test client
    "respx>=0.21",  # httpx mock (optional, conftest uses unittest.mock)
    "ruff>=0.5",
]

[project.scripts]
bastion = "bastion.__main__:main"

[project.urls]
Homepage = "https://github.com/cyprian-w/bastion"
Repository = "https://github.com/cyprian-w/bastion"
Documentation = "https://github.com/cyprian-w/bastion/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/bastion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: End-to-end stress tests (require live BASTION + Ollama)",
    "slow: Slow tests (integration, timing-sensitive) — excluded with -m 'not slow'",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]