[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bastion"
version = "0.4.0"
description = "Batch Affinity Scheduler for Throttled Inference on Ollama Networks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Cyprian Winogradow" },
]
keywords = ["ollama", "gpu", "vram", "scheduler", "proxy", "inference", "broker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
a2a = ["a2a-sdk[http-server]>=0.3,<1.0"]
dashboard = ["textual>=1.0,<3.0", "httpx>=0.27,<1.0", "psutil>=5.9,<7.0"]
metrics = ["prometheus-client>=0.20,<1.0"]
persistence = ["aiosqlite>=0.20,<1.0"]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx",  # test client
    "respx>=0.21,<1.0",  # httpx mock (optional, conftest uses unittest.mock)
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
bastion = "bastion.__main__:main"
bastion-dashboard = "bastion.dashboard:main"

[project.urls]
Homepage = "https://github.com/cyprian-w/bastion"
Repository = "https://github.com/cyprian-w/bastion"
Documentation = "https://github.com/cyprian-w/bastion/tree/main/docs"
Changelog = "https://github.com/cyprian-w/bastion/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/cyprian-w/bastion/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bastion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: End-to-end stress tests (require live BASTION + Ollama)",
    "slow: Slow tests (integration, timing-sensitive) — excluded with -m 'not slow'",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]