[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bastion-client"
version = "0.1.0"
description = "Python client library for BASTION GPU/LLM broker"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
